--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "type": "module",
   "private": true,
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/express": "^5.0.3"
   },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "dependencies": {
+    "@a2a-js/sdk": "^0.3.3",
+    "express": "^5.1.0",
+    "uuid": "^11.1.0"
   }
 }
