--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ai-sdk/openai": "^2.0.23",
     "ai": "^5.0.29",
     "express": "^5.1.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^4.1.5"
   }
 }
