--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3"
   },
   "peerDependencies": {
@@ -18,6 +19,7 @@
     "@a2a-js/sdk": "^0.3.3",
     "@ai-sdk/openai": "^2.0.23",
     "ai": "^5.0.29",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "uuid": "^11.1.0",
     "zod": "^4.1.5"
