--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@a2a-js/sdk": "^0.3.3",
     "@ai-sdk/openai": "^2.0.23",
-    "@hookform/resolvers": "^4.1.0",
+    "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-label": "^2.1.2",
@@ -26,8 +26,9 @@
     "lucide-react": "^0.542.0",
     "react": "^19",
     "react-dom": "^19",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.62.0",
     "react-syntax-highlighter": "^15.6.6",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
