--- a/web/package.json
+++ b/web/package.json
@@ -25,9 +25,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
+    "next": "^15.5.2",
     "postcss": "^8.5.6",
-    "react": "^19",
-    "react-dom": "^19",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-syntax-highlighter": "^15.6.6",
     "sonner": "^2.0.7",
